--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <ul>
 <li>Employer <a href="url">https://random416.github.io/Page-2/</a>
 </li>
-<li>Applicant <a href="page1.html">Page-3</a>
-</li>
+<li>Applicant <a href="page2. html">
+</li>              
 </ul>
       </section>
 
