--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <ul>
 <li>Employer <a href="url">https://random416.github.io/Page-2/</a>
 </li>
-<li>Applicant <a href="page2. html">
+<li>Applicant <a href="http://www.google.com">
 </li>              
 </ul>
       </section>
