--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 <h3>
 <a id="which-one-are-you" class="anchor" href="#which-one-are-you" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Which one are you</h3>
 <ul>
-<li>Employer <a href="https://random416.github.io/Page-2/">https://random416.github.io/Page-2/</a>
+<li>Employer <a href="https://random416.github.io/Page-2/" target="_blank">Click me</a>
 </li>
-<li>Applicant <a href="https://random416.github.io/Page-3/">https://random416.github.io/Page-3</a>
+<li>Applicant <a href="https://random416.github.io/Page-3/" target="_blank">Click me</a>
 </li>              
 </ul>
       </section>
