--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
 </ul>
       </section>
 
-    
+ <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <span class="octocat"></span>
+      </footer>   
 
     </div>
 
