--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <title>Work-site by Random416</title>
   </head>
 
-  
+  <body>
+    <a id="forkme_banner" href="https://github.com/Random416/Page-2">View on GitHub</a>
+    <div class="shell">
 
       <header>
         <span class="ribbon-outer">
