--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
  <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/Random416">Random416</a> can be found on <a href="https://github.com/Random416/Page-2">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
-      </footer>   
+      </footer>
+
 
     </div>
 
