--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/Random416/Page-2">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/Random416/work-site">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -62,7 +62,7 @@
  <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/Random416">Random416</a> can be found on <a href="https://github.com/Random416/Page-2">GitHub</a></p>
+            <p>this project by <a href="https://github.com/Random416">Random416</a> can be found on <a href="https://github.com/Random416/work-site">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
