--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Work-site by Random416</title>
+    <title>Work-site. by Random416</title>
   </head>
 
   <body>
